# wullicST

./: .envrc  .envrc~  README.md  avl.py  bst.py  bst_func.py  bst_func.py~  pyproject.toml  rbt.py  rbt.py~  spider5.py  spider5.py~  st.py  st.py~  test.py~
.direnv/python-3.8.5/: pyvenv.cfg
