[tool.poetry]
name = "wullic-st"
version = "0.1.0"
description = "Python treemap reasonable implememtation"
authors = ["wullic <1564405657@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.5"
pkuseg = "^0.0.25"
bs4 = "^0.0.1"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
